develop - refactored the mapping from entity to dto to be in controller layer